--- a/unidade02/16/exemplo03/css/style.css
+++ b/unidade02/16/exemplo03/css/style.css
@@ -1,3 +1,6 @@
-label, input[text], input[email], input[file], textarea {
+label, input[text], input[email], select {
     display: block;
+}
+span {
+    color: #ff0000;
 }
