--- a/unidade03/21/exemplo02/assets/css/style.css
+++ b/unidade03/21/exemplo02/assets/css/style.css
@@ -1,28 +1,16 @@
-.container01 {
+.container01, .container02, .container03, .container04 {
     border: 1px solid #000;
     width: 100%;
     height: 80px;
     display: flex;
 }
 .container02 {
-    border: 1px solid #000;
-    width: 100%;
-    height: 80px;
-    display: flex;
     flex-direction: row-reverse;
 }
 .container03 {
-    border: 1px solid #000;
-    width: 100%;
-    height: 80px;
-    display: flex;
     flex-direction: column;
 }
 .container04 {
-    border: 1px solid #000;
-    width: 100%;
-    height: 80px;
-    display: flex;
     flex-direction: column-reverse;
 }
 .box01 {
@@ -36,6 +24,6 @@
 }
 div {
     height: 50px;
-    width: 50px;
+    width: 250px;
     margin: 5px;    
 }
