--- a/unidade03/21/exemplo03/assets/css/style.css
+++ b/unidade03/21/exemplo03/assets/css/style.css
@@ -3,7 +3,8 @@
     width: 100%;
     height: 400px;
     display: flex;
-   align-items: stretch;
+    justify-content: center;
+    align-items: center;
 }
 .box01 {
     background-color: blueviolet;
@@ -15,5 +16,7 @@
     background-color: crimson;
 }
 div {
+    height: 50px;
+    width: 250px;
     margin: 5px;    
 }
