--- a/unidade03/22/exemplo01/assets/css/style.css
+++ b/unidade03/22/exemplo01/assets/css/style.css
@@ -1,27 +1,30 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+h1 {
+    text-align: center;
 }
 .container {
-    border: 1px solid #000;
-    width: 100%;
-    height: 300px;
+    background-color: rgba(100,0,0,0.2);
     display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
 }
-.box01 {
-    background-color: blueviolet;
+.container02 {
+    margin-top: 10px;
+    height: 400px;
+    background-color: rgba(0,100,100, 0.3);
 }
-.box02{
-    background-color: cornflowerblue;
-    flex-grow: 3;
+.item {
+    padding: 20px;
+    margin: 10px;
+    width: 200px;
+    color: #fff;
+    background-color: rgba(0,0,0,0.2);
+    text-align: center;
+    font-weight: bold;
 }
-.box03 {
-    background-color: crimson;
+.red {
+    background-color: rgba(255,0,0,0.5);
 }
-div {
-    height: 50px;
-    width: 150px;
+.green {
+    background-color: rgba(0,255,0,0.5);
+}
+.blue {
+    background-color: rgba(0,0,255,0.5);
 }
