--- a/unidade04/24/exemplo02/assets/css/style.css
+++ b/unidade04/24/exemplo02/assets/css/style.css
@@ -17,8 +17,20 @@ nav {
 }
 main {
     height: 75vh;
+    display: flex;
+}
+section {
+    width: 80%;    
     background-color: #fafafa;
     color: #333333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+aside {
+    width: 20%;
+    height: 75vh;
+    background-color: #5f9ea0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,48 +40,15 @@ footer {
     background-color: #333333;
     text-align: center;
 }
-/* 
+
 @media(max-width: 480px) {
-    main {
-        background-color: #ff7f50;
-    }
-    .celular {
-        display: block;
-    }
-    .desktop, .notebook, .tablet {
+    nav, aside {
         display: none;
     }
 }
+
 @media(min-width: 481px) and (max-width: 768px) {
-    main {
-        background-color: #8a2be2;
-    }
-    .tablet {
-        display: block;
-    }
-    .desktop, .notebook, .celular {
+    aside {
         display: none;
     }
 }
-@media(min-width: 769px) and (max-width: 1279px) {
-    main {
-        background-color: #6495ed;
-    }
-    .notebook {
-        display: block;
-    }
-    .desktop, .tablet, .celular {
-        display: none;
-    }
-}
-@media(min-width: 1280px) {
-    main {
-        background-color: #dc143c;
-    }
-    .desktop {
-        display: block;
-    }
-    .notebook, .table, .celular {
-        display: none;
-    }
-} */
